<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MorePage.SettingsFragment">

    <TextView
        android:id="@+id/configurationTextView"
        android:text="@string/configurationLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:gravity="center_vertical"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeMaxTextSize="23sp"
        android:autoSizeStepGranularity="2sp"
        android:layout_marginLeft="10dp"

        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/configurationOptionsLayout"
        />

    <LinearLayout
        android:id="@+id/configurationOptionsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="8"

        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toBottomOf="@id/configurationTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/applicationInformationLayout"
        >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                >

                <View
                    android:id="@+id/backupSpacer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:visibility="invisible"

                    app:layout_constraintWidth_percent="0.01"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/backupImageView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <ImageView
                    android:id="@+id/backupImageView"
                    android:src="@drawable/ic_upload"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="start"

                    app:layout_constraintWidth_percent="0.2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/backupSpacer"
                    app:layout_constraintRight_toLeftOf="@id/backupTextView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/backupTextView"
                    android:text="@string/backupAndRestoreLabel"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:textColor="#FFFFFF"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="15sp"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeStepGranularity="2sp"

                    android:gravity="center_vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/backupImageView"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:layout_weight="1"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            >

            <View
                android:id="@+id/settingsSpacer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:visibility="invisible"

                app:layout_constraintWidth_percent="0.01"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/settingsImageView"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageView
                android:id="@+id/settingsImageView"
                android:src="@drawable/ic_settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                app:layout_constraintWidth_percent="0.2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/settingsSpacer"
                app:layout_constraintRight_toLeftOf="@id/settingsTextView"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/settingsTextView"
                android:text="@string/advancedSettingsLabel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textColor="#FFFFFF"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeStepGranularity="2sp"

                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/settingsImageView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:layout_weight="1"

            app:layout_constraintWidth_percent="0.01"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            >

            <View
                android:id="@+id/spacer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:visibility="invisible"

                app:layout_constraintWidth_percent="0.01"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/languageImageView"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageView
                android:id="@+id/languageImageView"
                android:src="@drawable/ic_language"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                app:layout_constraintWidth_percent="0.2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/spacer"
                app:layout_constraintRight_toLeftOf="@id/languageTextView"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/languageTextView"
                android:text="@string/languageLabel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textColor="#FFFFFF"
                android:gravity="center_vertical"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeStepGranularity="2sp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/languageImageView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/applicationInformationLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"

        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toBottomOf="@id/configurationOptionsLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomSpacer"
        >
        <TextView
            android:id="@+id/generalTextView"
            android:text="@string/generalLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="#FFFFFF"
            android:gravity="start"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="15sp"
            android:autoSizeMaxTextSize="21sp"
            android:autoSizeStepGranularity="2sp"
            android:layout_marginLeft="10dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/versionTextView"
            />

        <TextView
            android:id="@+id/versionTextView"
            android:text="@string/versionLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="#FFFFFF"
            android:gravity="start"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="15sp"
            android:autoSizeMaxTextSize="21sp"
            android:autoSizeStepGranularity="2sp"
            android:layout_marginLeft="10dp"

            app:layout_constraintTop_toBottomOf="@id/generalTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/versionNumberTextView"
            />

        <TextView
            android:id="@+id/versionNumberTextView"
            android:text="@string/versionNumberLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="#828282"
            android:gravity="start"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeStepGranularity="2sp"
            android:layout_marginLeft="13dp"

            app:layout_constraintTop_toBottomOf="@id/versionTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/aboutUsTextView"
            />

        <TextView
            android:id="@+id/aboutUsTextView"
            android:text="@string/aboutUsLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="#FFFFFF"
            android:gravity="start"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="15sp"
            android:autoSizeMaxTextSize="21sp"
            android:autoSizeStepGranularity="2sp"
            android:layout_marginLeft="10dp"

            app:layout_constraintTop_toBottomOf="@+id/versionNumberTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/termsAndPoliciesTextView"
            />

        <TextView
            android:id="@+id/termsAndPoliciesTextView"
            android:text="@string/termsAndPoliciesLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="#FFFFFF"
            android:gravity="start"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="15sp"
            android:autoSizeMaxTextSize="21sp"
            android:autoSizeStepGranularity="2sp"
            android:layout_marginLeft="10dp"

            app:layout_constraintTop_toBottomOf="@id/aboutUsTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bottomSpacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:layout_weight="1"

        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/applicationInformationLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>